--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -37,6 +37,7 @@ defaults
     errorfile 504 /usr/local/etc/haproxy/errors/504.http
 
 backend dockerbackend
+    http-request replace-path ^(\ *)$ $HTTP_PATH_PREFIX/\1
     server dockersocket $SOCKET_PATH
 
 backend docker-events
